@@ -1,2 +1,0 @@
-usr/include/cantor/
-usr/lib/*/libcantorlibs.so
