@@ -248,31 +248,6 @@ Description: Scilab backend for Cantor
  .
  This package is part of the KDE education module.
 
-Package: cantor-dev
-Architecture: any
-Section: libdevel
-Depends: cantor (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
-Description: interface for mathematical applications - development files
- Cantor is an application to allow you to you use your favorite mathematical
- applications from within an elegant worksheet interface. It provides dialogs
- to assist with common tasks and allows you to share your worksheets
- with others.
- .
- Cantor supports various mathematical applications as backends (provided in
- external packages):
-  * Maxima Computer Algebra System (cantor-backend-maxima)
-  * R Project for Statistical Computing (cantor-backend-r)
-  * Sage Mathematics Software (cantor-backend-sage)
-  * Octave (cantor-backend-octave)
-  * Python (cantor-backend-python2 and cantor-backend-python3)
-  * Scilab (cantor-backend-scilab)
-  * Qalculate! (cantor-backend-qalculate)
-  * Lua (cantor-backend-lua)
- .
- This package is part of the KDE education module.
- .
- This package contains development files for cantor.
-
 Package: libcantor-pythonbackend
 Architecture: any
 Section: math
